# quakepp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: ConfigureRcFile.cmake  config.h.in
src/: CMakeLists.txt  engine.cpp  engine.h  event.cpp  event.h  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: assert.h  byte_swap.h  common.h  concat.h  io.h  lru.h  math.h  ptr.h  try.h  types.h
src/core/: CMakeLists.txt  cli.cpp  engine.cpp  event.cpp
src/core/include/core/: cli.h  engine.h  event.h
src/core/src/: cli.cpp  engine.cpp  event.cpp  frame.cpp  init.cpp
src/event/: CMakeLists.txt
src/event/include/event/: event.h  types.h
src/event/src/: init.cpp  keyboard.cpp  mouse.cpp  queue.cpp
src/filesystem/: CMakeLists.txt  pak.cpp  search_dir.cpp
src/filesystem/include/filesystem/: filesystem.h  pak.h  search_dir.h
src/filesystem/src/: filesystem.cpp  pak.cpp
src/fs/: CMakeLists.txt
src/fs/include/fs/: fs.h  pak.h
src/fs/src/: dir.cpp  init.cpp  load.cpp  pak.cpp
src/input/: CMakeLists.txt  input.cpp
src/input/include/input/: input.h  keys.h
src/input/src/: mouse.cpp
src/menu/: CMakeLists.txt
src/menu/include/menu/: menu.h
src/menu/src/: draw.cpp  init.cpp  menu.cpp
src/render/: CMakeLists.txt
src/render/include/render/: gl1.h  render.h
src/render/src/: render.cpp  texture.cpp
src/render/src/gl1/: context.cpp  init.cpp  render.cpp  texture.cpp  viewport.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: gl1.h  renderer.h
src/renderer/src/: gl_ctx.cpp  gl_ctx.h  init.cpp
src/renderer/src/gl1/: context.cpp  gl1.h  image.cpp  init.cpp  pic.cpp  render.cpp  texture.cpp  upload.cpp  viewport.cpp  window.cpp
src/video/: CMakeLists.txt  video.cpp
src/video/include/video/: video.h  window.h
src/video/src/: draw.cpp  init.cpp  mode.cpp  video.cpp  window.cpp
src/window/: CMakeLists.txt
src/window/include/window/: window.h
src/window/src/: window.cpp
